--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "openblocks-module-interface"]
 	path = openblocks-module-interface
 	url = https://github.com/OpenBlocksTeam/openblocks-module-interface
+[submodule "sketchware-blocks-view"]
+	path = sketchware-blocks-view
+	url = https://github.com/OpenBlocksTeam/sketchware-blocks-view
